--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -50,10 +50,10 @@
 }
 
 .ck.ck-editor__main > .ck-editor__editable:not(.ck-focused) {
-  border-color: transparent;
+  border-color: black;
 }
 
 .ck.ck-editor__main > .ck-editor__editable {
-  background: transparent;
-  border-radius: 0;
+  background: black;
+  
 }
