--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -1,7 +1,12 @@
-.ck.ck-editor__main > .ck-editor__editable {
+/* .ck.ck-editor__main > .ck-editor__editable {
   background-color: transparent;
   border: none;
   outline: none;
+} */
+
+.ck.ck-editor__main > .ck-editor__editable {
+  background: black !important;
+  
 }
 
 .ck.ck-editor__main > .ck-editor__editable.ck-focused {
@@ -53,7 +58,4 @@
   border-color: black;
 }
 
-.ck.ck-editor__main > .ck-editor__editable {
-  background: black;
-  
-}
+
