--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -4,7 +4,7 @@
   outline: none;
 } */
 
-.ck.ck-editor__main > .ck-editor__editable {
+.ck-editor__main > .ck-editor__editable {
   background: black !important;
   
 }
