--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -1,8 +1,20 @@
- .ck-editor__editable {
+ /* .ck-editor__editable {
   background-color: white !important;
   color: black !important;
   border: none;
   outline: none;
+} */
+
+.ck-editor__editable {
+  background-color: transparent !important;
+  /* color: black !important; */
+  border: none;
+  outline: none;
+  
+}
+
+.ck.ck-editor__main > .ck-editor__editable.ck-focused {
+  border: none;
 }
 
 /* .ck-editor__main > .ck-editor__editable.p {
