--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -25,7 +25,7 @@
 }
 
 
-.ck-toolbar.ck-toolbar_grouping {
+.ck.ck-toolbar.ck-toolbar_grouping {
   background-color: transparent;
   border: none;
 }
