--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -35,6 +35,33 @@
   color: gray;
   background-color: transparent;
 }
+
+
+.ck.ck-button:hover,
+.ck.ck-button.ck-off:hover,
+.ck.ck-button.ck-on:hover {
+  background-color: transparent !important;
+  cursor: pointer;
+  color: gray;
+}
+
+.ck-dropdown__panel .ck.ck-button.ck-off.ck-button__with-text {
+  background-color: black !important;
+}
+
+.ck.ck-list__item {
+  background-color: black !important;
+}
+
+.ck-dropdown__panel .ck-dropdown__panel-visible {
+  border: none;
+}
+
+.ck-editor__top {
+  position: sticky !important;
+  top: 0 !important;
+  background: #121212 !important;
+}
 /* 
 
 
