--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -10,10 +10,11 @@
   /* color: black !important; */
   border: none;
   outline: none;
+  height: 100px;
   
 }
 
-.ck.ck-editor__main > .ck-editor__editable.ck-focused {
+ .ck-editor__editable.ck-focused {
   border: none;
 }
 
@@ -32,7 +33,7 @@
 
 .ck.ck-button,
 .ck.ck-button.ck-on {
-  color: gray;
+  color:rgb(255, 255, 255);
   background-color: transparent;
 }
 
