--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -1,13 +1,8 @@
- /* .ck-editor__editable {
-  background-color: white !important;
-  color: black !important;
-  border: none;
-  outline: none;
-} */
+ 
 
 .ck-editor__editable {
   background-color: transparent !important;
-  /* color: black !important; */
+  
   border: none;
   outline: none;
   height: 100px;
@@ -15,13 +10,18 @@
 }
 
  .ck-editor__editable.ck-focused {
+  
   border: none;
+  outline: none;
 }
 
 .ck.ck-editor__main > .ck-editor__editable.ck-focused {
   border: none;
+  outline: none;
 }
-.ck.ck-toolbar .ck.ck-toolbar__separator {
+
+
+.ck.ck-toolbar__separator {
   background-color: transparent;
 }
 
@@ -62,48 +62,5 @@
   position: sticky !important;
   top: 0 !important;
   background: #121212 !important;
+  outline: none;
 }
-/* 
-
-
-
-
-
-.ck.ck-toolbar.ck-toolbar_grouping {
-  background-color: transparent;
-  border: none;
-}
-
-
-
-.ck.ck-button:hover,
-.ck.ck-button.ck-off:hover,
-.ck.ck-button.ck-on:hover {
-  background-color: transparent !important;
-  cursor: pointer;
-  color: gray;
-}
-
-.ck-dropdown__panel .ck.ck-button.ck-off.ck-button__with-text {
-  background-color: black !important;
-}
-
-.ck.ck-list__item {
-  background-color: black !important;
-}
-
-.ck-dropdown__panel .ck-dropdown__panel-visible {
-  border: none;
-}
-
-.ck-editor__top {
-  position: sticky !important;
-  top: 0 !important;
-  background: #121212 !important;
-}
-
-.ck.ck-editor__main > .ck-editor__editable:not(.ck-focused) {
-  border-color: black;
-} */
-
-
