--- a/client1/src/css/custom-editor.css
+++ b/client1/src/css/custom-editor.css
@@ -5,7 +5,7 @@
   
   border: none;
   outline: none;
-  height: 100px;
+  
   
 }
 
@@ -31,9 +31,14 @@
   border: none;
 }
 
+/* .ck-button{
+  color: white;
+  background-color: transparent;
+} */
+
 .ck.ck-button,
 .ck.ck-button.ck-on {
-  color:rgb(255, 255, 255);
+  color:grey;
   background-color: transparent;
 }
 
@@ -63,4 +68,8 @@
   top: 0 !important;
   background: #121212 !important;
   outline: none;
+}
+
+.ck.ck-editor__main>.ck-editor__editable:not(.ck-focused) {
+  border-color: var(--ck-color-base-border);
 }
